<resources>
    <string name="app_name">Pace CAP</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="newaccount">Don\'t Have An Account?</string>
    <string name="existaccount">Already Have An Account?</string>
    <string name="userDetails">User Details</string>
    <string name="firstname">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="otp">Get otp</string>
    <string name="enterotp">Enter OTP</string>
    <string name="next">NEXT</string>
    <string name="deviceDetails">Device Details</string>
    <string name="brandname">Brand Name</string>
    <string name="devicetype">Device Type</string>
    <string name="serialno">Serial Number</string>
    <string name="modelnumber">Model Number</string>
    <string name="implantdate">Implant Date</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="caretaker">Care Taker</string>
    <string name="name">Name</string>
    <string name="phoneoremail">Mail Id / Phone Number</string>
    <string name="relation">Relation</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="action_settings">Settings</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="settings">Setting</string>
    <string name="submit">Submit</string>
    <string name="note">Note: Password Reset Link Send To Your Email Kindly Check</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="mydevice">My Device</string>
    <string name="datatransfer">Data Transfer</string>
    <string name="record">Record</string>
    <string name="educaton">Education</string>
    <string name="myclinic">My Clinic</string>

    <string name="security">Security</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Pace CAP</string>
    <string name="menu_gallery">Help</string>
    <string name="menu_slideshow">About</string>
</resources>