<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:textColor="#28A0EA"
        android:paddingStart="20dp"
        tools:ignore="MissingConstraints" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#28A0EA"
        android:layout_marginTop="40dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textColor="#28A0EA"
        android:backgroundTint="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newaccount"
            android:textColor="#000000"
            android:paddingLeft="100dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:paddingLeft="10dp"
            android:textColor="#28A0EA"
            tools:ignore="MissingConstraints" />
    </LinearLayout>



    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword"
        android:layout_marginTop="30dp"
        android:textColor="#28A0EA"
        android:textSize="20sp"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints" />


</LinearLayout>