<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".caretaker">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caretaker"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#28A0EA"
        android:layout_marginTop="70dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/mailorphone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/phoneoremail"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />


    <EditText
        android:id="@+id/relation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/relation"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/address"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="#28A0EA"
        android:backgroundTint="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />
</LinearLayout>