<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".deviceDetails">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deviceDetails"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#28A0EA"
        android:layout_marginTop="30dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/devicetype"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="40dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/brandname"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />
    <EditText
        android:id="@+id/brandname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/devicetype"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/serialnumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/serialno"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />
    <EditText
        android:id="@+id/modelnumber"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/modelnumber"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/implantdate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/implantdate"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />
    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="#28A0EA"
        android:backgroundTint="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottonstyle"
        android:importantForAccessibility="no" />

</LinearLayout>