<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".forgotPassword">

    <EditText
        android:id="@+id/resetemail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:autofillHints="emailAddress"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#000000"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#F1F46E"
        android:text="@string/submit"
        android:textColor="#E8EFEF"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>




</LinearLayout>