<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".signup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#28A0EA"
        android:layout_marginTop="70dp"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="40dp"
        android:autofillHints="emailAddress"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />
    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:drawableStart="@drawable/edittext"
        android:drawableLeft="@drawable/edittext"
        android:background="@drawable/edittext"
        android:hint="@string/confirmpassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="#28A0EA"
        android:backgroundTint="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/existaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existaccount"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints" />

</LinearLayout>