<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:padding="30dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/mainbackgroundimage"
        android:layout_gravity="center"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:columnCount="3"
        android:rowCount="2"
        >

        <RelativeLayout
            android:id="@+id/mydevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/heart" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/data"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/datatransfer" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/record" />

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mydevice"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datatransfer"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:paddingRight="0dp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textColor="@color/white" />


    </GridLayout>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:columnCount="3"
        android:rowCount="2"
        >

        <RelativeLayout
            android:id="@+id/education"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/education" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/myclinic"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/myclinic" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/security"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="center"

            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/security" />

        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/educaton"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myclinic"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:paddingRight="0dp"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:textColor="@color/white" />

    </GridLayout>


</LinearLayout>